--- a/.vercel-trigger.json
+++ b/.vercel-trigger.json
@@ -1,4 +1,4 @@
 {
-  "deployedAt": "2026-01-08T02:42:05.883Z",
-  "project": "dfadfadfaf"
+  "deployedAt": "2026-01-08T03:33:52.296Z",
+  "project": "sdfdsffsde112"
 }
