--- a/.vercel-trigger.json
+++ b/.vercel-trigger.json
@@ -1,4 +1,4 @@
 {
-  "deployedAt": "2026-01-08T03:33:52.296Z",
-  "project": "sdfdsffsde112"
+  "deployedAt": "2026-01-08T04:00:54.621Z",
+  "project": "dsfsdfsdfsdf"
 }
